notice page primarily done.

--- a/notice/index.html
+++ b/notice/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../public/css/utils/breadcrumb.css" />
     <link rel="stylesheet" href="../public/css/utils/events.css" />
     <link rel="stylesheet" href="../public/css/components/header-type-2.css" />
+    <link rel="stylesheet" href="../public/css/components/search.css" />
     <link rel="stylesheet" href="../public/css/components/footer.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Notice</title>
@@ -154,7 +155,7 @@
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h2>
-          <div>
+          <div class="news-wrapper">
             <img src="https://placehold.co/544x230" alt="dummy pic" />
             <button class="slider__btn slider__btn--left">
               <svg class="sprite sprite--large">
@@ -166,8 +167,10 @@
                 <use href="../assets/img/sprite.svg#carousel_arrow-right"></use>
               </svg>
             </button>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-            <p>Lorem, ipsum dolor.</p>
+            <div class="news-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
           </div>
           <ul class="events">
             <li class="event">
@@ -194,10 +197,245 @@
           </ul>
         </section>
 
-        <section class="events">Events</section>
+        <section class="events-section">
+          <div class="section__title">
+            <h2 class="heading-2">Events</h2>
+            <svg class="sprite sprite--normal" role="img">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </div>
+          <div class="events-wrapper">
+            <ul class="events">
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+              <li class="event">
+                <div class="event__date">
+                  <span class="text-large-bold">15</span>
+                  <span class="text-medium">Jan</span>
+                </div>
+                <div class="event__desc">
+                  <p class="text-medium-bold">
+                    This is a event headline. Lorem ipsum
+                  </p>
+                  <p class="text-medium">This is event description</p>
+                  <p class="text-small-extra">01 Jan, 1970</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
 
-        <section class="notice">NOTICE</section>
+        <section class="notice">
+          <div class="section__title">
+            <h2 class="heading-2">Notice</h2>
+            <svg class="sprite sprite--normal" role="img">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </div>
+          <ul>
+            <li class="notice-item">
+              <svg class="sprite sprite--normal" role="img">
+                <use
+                  href="../assets/img/sprite.svg#icon-radio-button-checked"
+                ></use>
+              </svg>
+              <div>
+                <p class="text-medium">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perferendis nesciunt aspernatur ex iusto molestiae veniam
+                  facilis fugit. Provident, dignissimos maxime!
+                </p>
+                <p class="text-small-extra">01 Jan, 1970</p>
+              </div>
+            </li>
+            <li class="notice-item">
+              <svg class="sprite sprite--normal" role="img">
+                <use
+                  href="../assets/img/sprite.svg#icon-radio-button-checked"
+                ></use>
+              </svg>
+              <div>
+                <p class="text-medium">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perferendis nesciunt aspernatur ex iusto molestiae veniam
+                  facilis fugit. Provident, dignissimos maxime!
+                </p>
+                <p class="text-small-extra">01 Jan, 1970</p>
+              </div>
+            </li>
+            <li class="notice-item">
+              <svg class="sprite sprite--normal" role="img">
+                <use
+                  href="../assets/img/sprite.svg#icon-radio-button-checked"
+                ></use>
+              </svg>
+              <div>
+                <p class="text-medium">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perferendis nesciunt aspernatur ex iusto molestiae veniam
+                  facilis fugit. Provident, dignissimos maxime!
+                </p>
+                <p class="text-small-extra">01 Jan, 1970</p>
+              </div>
+            </li>
+          </ul>
+        </section>
       </div>
+      <section class="search">
+        <form action="get" class="search-form-large">
+          <input
+            type="search"
+            name="search-input"
+            id="search-input"
+            class="text-small"
+            placeholder="Can’t Find What You’re Looking For?"
+          />
+          <button class="text-medium btn-submit">Search</button>
+        </form>
+      </section>
     </main>
+
+    <footer class="footer separator-gradient">
+      <div class="social-media">
+        <p class="text-small-bold">CONNECT WITH US</p>
+        <span>
+          <svg class="sprite sprite--medium">
+            <use href="../assets/img/sprite.svg#icon-whatsapp-o"></use>
+          </svg>
+          <svg class="sprite sprite--medium">
+            <use href="../assets/img/sprite.svg#icon-youtube-o"></use>
+          </svg>
+          <svg class="sprite sprite--medium">
+            <use href="../assets/img/sprite.svg#icon-facebook-o"></use>
+          </svg>
+        </span>
+      </div>
+      <section class="footer__links">
+        <img
+          src="../assets/img/logo.png"
+          alt="logo"
+          class="logo"
+          width="100"
+          height="100"
+        />
+        <div class="footer-content-wrapper separator-gradient-vertical">
+          <h2 class="heading-2">
+            Public High School<br />
+            (Higher Secondary)
+          </h2>
+          <div class="location-wrapper">
+            <svg class="sprite sprite--normal">
+              <use href="../assets/img/sprite.svg#icon-location-filled"></use>
+            </svg>
+            <p class="text-small">
+              DUMDUM SOUTH, NORTH<br />TWENTY FOUR PARGANAS<br />West Bengal -
+              700 003
+            </p>
+          </div>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+      </section>
+      <section class="footer__nav separator-gradient">
+        <p class="text-small-extra">&copy;Public High School 2024</p>
+        <nav>
+          <ul>
+            <li class="text-small-extra">Contact us</li>
+            <li class="text-small-extra">About this site</li>
+            <li class="text-small-extra">Legal</li>
+            <li class="text-small-extra">Privacy Policy</li>
+            <li class="text-small-extra">Cookie Settings</li>
+            <li class="text-small-extra">Accessibility Statement</li>
+          </ul>
+        </nav>
+      </section>
+    </footer>
   </body>
 </html>
