notice page layout with styling complete.

--- a/notice/index.html
+++ b/notice/index.html
@@ -168,8 +168,10 @@
               </svg>
             </button>
             <div class="news-text">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-              <p>Lorem, ipsum dolor.</p>
+              <p class="text-large-bold">
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+              </p>
+              <p class="text-small">01 Jan, 1970</p>
             </div>
           </div>
           <ul class="events">
