notice page feature complete

--- a/notice/index.html
+++ b/notice/index.html
@@ -220,17 +220,36 @@
                   <p class="text-small">01 Jan, 1970</p>
                 </div>
               </div>
+              <div class="news-card">
+                <img
+                  src="./img/news-5.jpg"
+                  alt="dummy pic"
+                  class="news-image"
+                />
+                <div class="news-text">
+                  <p class="text-large-bold">
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                  </p>
+                  <p class="text-small">01 Jan, 1970</p>
+                </div>
+              </div>
+              <div class="news-card">
+                <img
+                  src="./img/news-6.jpg"
+                  alt="dummy pic"
+                  class="news-image"
+                />
+                <div class="news-text">
+                  <p class="text-large-bold">
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                  </p>
+                  <p class="text-small">01 Jan, 1970</p>
+                </div>
+              </div>
             </div>
           </div>
 
-          <ul class="events">
-            <li class="event event--small">
-              <img src="./img/news-thumb-1.jpg" width="50px" alt="" />
-              <div class="event__desc">
-                <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
-                <p class="text-small-extra">01 Jan, 1970</p>
-              </div>
-            </li>
+          <ul class="events news-list">
             <li class="event event--small">
               <img src="./img/news-thumb-2.jpg" width="50px" alt="" />
               <div class="event__desc">
@@ -246,7 +265,28 @@
               </div>
             </li>
             <li class="event event--small">
-              <img src="./img/news-thumb-3.jpg" width="50px" alt="" />
+              <img src="./img/news-thumb-4.jpg" width="50px" alt="" />
+              <div class="event__desc">
+                <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
+                <p class="text-small-extra">01 Jan, 1970</p>
+              </div>
+            </li>
+            <li class="event event--small">
+              <img src="./img/news-thumb-5.jpg" width="50px" alt="" />
+              <div class="event__desc">
+                <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
+                <p class="text-small-extra">01 Jan, 1970</p>
+              </div>
+            </li>
+            <li class="event event--small">
+              <img src="./img/news-thumb-6.jpg" width="50px" alt="" />
+              <div class="event__desc">
+                <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
+                <p class="text-small-extra">01 Jan, 1970</p>
+              </div>
+            </li>
+            <li class="event event--small">
+              <img src="./img/news-thumb-1.jpg" width="50px" alt="" />
               <div class="event__desc">
                 <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
                 <p class="text-small-extra">01 Jan, 1970</p>
