--- a/admission/index.html
+++ b/admission/index.html
@@ -240,7 +240,7 @@
           </svg>
         </h2>
         <div class="faqs-conainter">
-          <details name="question">
+          <details data-name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -251,7 +251,7 @@
               incidunt!
             </p>
           </details>
-          <details name="question">
+          <details data-name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -262,7 +262,7 @@
               incidunt!
             </p>
           </details>
-          <details name="question">
+          <details data-name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -273,7 +273,7 @@
               incidunt!
             </p>
           </details>
-          <details name="question">
+          <details data-name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -284,7 +284,7 @@
               incidunt!
             </p>
           </details>
-          <details name="question">
+          <details data-name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
