--- a/notice/index.html
+++ b/notice/index.html
@@ -250,42 +250,42 @@
 
           <ul class="events news-list">
             <li class="event event--small">
-              <img src="./img/news-thumb-2.jpg" width="50px" alt="" />
+              <img src="./img/news-thumb-2.jpg" width="50" alt="" />
               <div class="event__desc">
                 <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
                 <p class="text-small-extra">01 Jan, 1970</p>
               </div>
             </li>
             <li class="event event--small">
-              <img src="./img/news-thumb-3.jpg" width="50px" alt="" />
+              <img src="./img/news-thumb-3.jpg" width="50" alt="" />
               <div class="event__desc">
                 <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
                 <p class="text-small-extra">01 Jan, 1970</p>
               </div>
             </li>
             <li class="event event--small">
-              <img src="./img/news-thumb-4.jpg" width="50px" alt="" />
+              <img src="./img/news-thumb-4.jpg" width="50" alt="" />
               <div class="event__desc">
                 <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
                 <p class="text-small-extra">01 Jan, 1970</p>
               </div>
             </li>
             <li class="event event--small">
-              <img src="./img/news-thumb-5.jpg" width="50px" alt="" />
+              <img src="./img/news-thumb-5.jpg" width="50" alt="" />
               <div class="event__desc">
                 <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
                 <p class="text-small-extra">01 Jan, 1970</p>
               </div>
             </li>
             <li class="event event--small">
-              <img src="./img/news-thumb-6.jpg" width="50px" alt="" />
+              <img src="./img/news-thumb-6.jpg" width="50" alt="" />
               <div class="event__desc">
                 <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
                 <p class="text-small-extra">01 Jan, 1970</p>
               </div>
             </li>
             <li class="event event--small">
-              <img src="./img/news-thumb-1.jpg" width="50px" alt="" />
+              <img src="./img/news-thumb-1.jpg" width="50" alt="" />
               <div class="event__desc">
                 <p class="text-small-extra-bold">Lorem ipsum dolor sit amet.</p>
                 <p class="text-small-extra">01 Jan, 1970</p>
