about page complete

--- a/notice/index.html
+++ b/notice/index.html
@@ -18,14 +18,15 @@
   </head>
   <body>
     <header class="header">
-      <a href="../public/"
-        ><img
+      <a href="../public/">
+        <img
           src="../assets/img/logo.png"
           alt="logo"
           class="logo"
           width="100"
           height="100"
-      /></a>
+        />
+      </a>
       <nav class="main-nav">
         <div class="top-container">
           <ul class="auxiliary-links">
