--- a/about/index.html
+++ b/about/index.html
@@ -146,13 +146,15 @@
         </ul>
       </nav>
 
-      <div class="container">
-        <div class="row">
-          <h1>About our Public High School</h1>
-          <svg class="sprite sprite--normal" role="img">
-            <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-          </svg>
-          <p>
+      <div class="grid-wrapper">
+        <div class="about-main">
+          <div class="title-box">
+            <h1 class="heading-1">About our Public High School</h1>
+            <svg class="sprite sprite--normal" role="img">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </div>
+          <p class="text-small text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
             sunt, quidem, modi quisquam laboriosam officia beatae explicabo quos
             quae vero neque illo cum aliquam perferendis quam dolorum deserunt
@@ -161,99 +163,202 @@
             at delectus voluptas!
           </p>
           <img src="https://placehold.co/832x234" alt="a dummy pic" />
-          <aside>
-            <div class="quick-links">
-              <h2>Quick Links</h2>
-              <ul>
-                <li><a href="#">Link item one</a></li>
-                <li><a href="#">Link item two</a></li>
-                <li><a href="#">Link item three</a></li>
-                <li><a href="#">Link item four</a></li>
-                <li><a href="#">Link item five</a></li>
-              </ul>
-            </div>
-            <div class="other-links">
-              <h2>Other Links</h2>
-              <ul>
-                <li><a href="#">Link item one</a></li>
-                <li><a href="#">Link item two</a></li>
-                <li><a href="#">Link item three</a></li>
-                <li><a href="#">Link item four</a></li>
-                <li><a href="#">Link item five</a></li>
-              </ul>
-            </div>
-          </aside>
         </div>
-        <div class="row">
-          <div class="about-cards">
-            <article>
-              <img src="https://placehold.co/256x144" alt="a pic" />
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>Lorem, ipsum dolor.</p>
-            </article>
-            <article>
-              <img src="https://placehold.co/256x144" alt="a pic" />
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>Lorem, ipsum dolor.</p>
-            </article>
-            <article>
-              <img src="https://placehold.co/256x144" alt="a pic" />
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>Lorem, ipsum dolor.</p>
-            </article>
-            <article>
-              <img src="https://placehold.co/256x144" alt="a pic" />
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>Lorem, ipsum dolor.</p>
-            </article>
-            <article>
-              <img src="https://placehold.co/256x144" alt="a pic" />
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>Lorem, ipsum dolor.</p>
-            </article>
-            <article>
-              <img src="https://placehold.co/256x144" alt="a pic" />
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>Lorem, ipsum dolor.</p>
-            </article>
+
+        <aside class="about-aside-top">
+          <div class="quick-links">
+            <h2>Quick Links</h2>
+            <ul>
+              <li><a href="#">Link item one</a></li>
+              <li><a href="#">Link item two</a></li>
+              <li><a href="#">Link item three</a></li>
+              <li><a href="#">Link item four</a></li>
+              <!-- <li><a href="#">Link item five</a></li> -->
+            </ul>
           </div>
-          <aside>
-            <div>
-              <h2>Section header</h2>
-              <svg class="sprite sprite--normal" role="img">
-                <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-              </svg>
-              <ul>
-                <li><a href="#">Link one</a></li>
-                <li><a href="#">Link two</a></li>
-                <li><a href="#">Link three</a></li>
-              </ul>
-            </div>
-            <div>
-              <h2>Section header</h2>
-              <svg class="sprite sprite--normal" role="img">
-                <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-              </svg>
-              <ul>
-                <li><a href="#">Link one</a></li>
-                <li><a href="#">Link two</a></li>
-                <li><a href="#">Link three</a></li>
-              </ul>
-            </div>
-            <div>
-              <h2>Section header</h2>
-              <svg class="sprite sprite--normal" role="img">
-                <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
-              </svg>
-              <ul>
-                <li><a href="#">Link one</a></li>
-                <li><a href="#">Link two</a></li>
-                <li><a href="#">Link three</a></li>
-              </ul>
-            </div>
-          </aside>
+          <div class="other-links">
+            <h2>Other Links</h2>
+            <ul>
+              <li><a href="#">Link item one</a></li>
+              <li><a href="#">Link item two</a></li>
+              <li><a href="#">Link item three</a></li>
+              <li><a href="#">Link item four</a></li>
+              <!-- <li><a href="#">Link item five</a></li> -->
+            </ul>
+          </div>
+        </aside>
+
+        <div class="about-cards">
+          <article>
+            <img src="https://placehold.co/256x144" alt="a pic" />
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem, ipsum dolor.</p>
+          </article>
+          <article>
+            <img src="https://placehold.co/256x144" alt="a pic" />
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem, ipsum dolor.</p>
+          </article>
+          <article>
+            <img src="https://placehold.co/256x144" alt="a pic" />
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem, ipsum dolor.</p>
+          </article>
+          <article>
+            <img src="https://placehold.co/256x144" alt="a pic" />
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem, ipsum dolor.</p>
+          </article>
+          <article>
+            <img src="https://placehold.co/256x144" alt="a pic" />
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem, ipsum dolor.</p>
+          </article>
+          <article>
+            <img src="https://placehold.co/256x144" alt="a pic" />
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem, ipsum dolor.</p>
+          </article>
         </div>
+
+        <aside class="about-aside-bottom">
+          <div>
+            <h2>Section header</h2>
+            <svg class="sprite sprite--normal" role="img">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+            <ul>
+              <li><a href="#">Link one</a></li>
+              <li><a href="#">Link two</a></li>
+              <li><a href="#">Link three</a></li>
+            </ul>
+          </div>
+          <div>
+            <h2>Section header</h2>
+            <svg class="sprite sprite--normal" role="img">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+            <ul>
+              <li><a href="#">Link one</a></li>
+              <li><a href="#">Link two</a></li>
+              <li><a href="#">Link three</a></li>
+            </ul>
+          </div>
+          <div>
+            <h2>Section header</h2>
+            <svg class="sprite sprite--normal" role="img">
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+            <ul>
+              <li><a href="#">Link one</a></li>
+              <li><a href="#">Link two</a></li>
+              <li><a href="#">Link three</a></li>
+            </ul>
+          </div>
+        </aside>
       </div>
+
+      <section class="search">
+        <form action="get" class="search-form-large">
+          <input
+            type="search"
+            name="search-input"
+            id="search-input"
+            class="text-small"
+            placeholder="Can’t Find What You’re Looking For?"
+          />
+          <button class="text-medium btn-submit">Search</button>
+        </form>
+      </section>
     </main>
+
+    <footer class="container section footer">
+      <div class="social-media separator-gradient">
+        <p class="text-small-bold">CONNECT WITH US</p>
+        <span>
+          <svg class="sprite sprite--medium">
+            <use href="/assets/img/sprite.svg#icon-whatsapp-o"></use>
+          </svg>
+          <svg class="sprite sprite--medium">
+            <use href="/assets/img/sprite.svg#icon-youtube-o"></use>
+          </svg>
+          <svg class="sprite sprite--medium">
+            <use href="/assets/img/sprite.svg#icon-facebook-o"></use>
+          </svg>
+        </span>
+      </div>
+
+      <section class="footer__links">
+        <div class="footer-content-wrapper separator-gradient-vertical">
+          <img src="/assets/img/logo.png" alt="logo" class="logo__footer" />
+          <h2 class="heading-2 title__footer">
+            Public High School<br />
+            (Higher Secondary)
+          </h2>
+          <div class="location-wrapper">
+            <svg class="sprite sprite--normal">
+              <use href="/assets/img/sprite.svg#icon-location-filled"></use>
+            </svg>
+            <p class="text-small">
+              DUMDUM SOUTH, NORTH<br />TWENTY FOUR PARGANAS<br />West Bengal -
+              700 003
+            </p>
+          </div>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="footer__nav separator-gradient">
+        <p class="text-small-extra">&copy;Public High School 2024</p>
+        <nav>
+          <ul>
+            <li class="text-small-extra">Contact us</li>
+            <li class="text-small-extra">About this site</li>
+            <li class="text-small-extra">Legal</li>
+            <li class="text-small-extra">Privacy Policy</li>
+            <li class="text-small-extra">Cookie Settings</li>
+            <li class="text-small-extra">Accessibility Statement</li>
+          </ul>
+        </nav>
+      </section>
+    </footer>
   </body>
 </html>
