about page complete

--- a/about/index.html
+++ b/about/index.html
@@ -162,7 +162,7 @@
             nemo? Corrupti quae saepe neque nemo, provident eius aut reiciendis
             at delectus voluptas!
           </p>
-          <img src="https://placehold.co/832x234" alt="a dummy pic" />
+          <img src="./img/about-cover.jpg" alt="a campus pic" />
         </div>
 
         <aside class="about-aside-top">
@@ -173,7 +173,6 @@
               <li><a href="#">Link item two</a></li>
               <li><a href="#">Link item three</a></li>
               <li><a href="#">Link item four</a></li>
-              <!-- <li><a href="#">Link item five</a></li> -->
             </ul>
           </div>
           <div class="other-links">
@@ -183,39 +182,38 @@
               <li><a href="#">Link item two</a></li>
               <li><a href="#">Link item three</a></li>
               <li><a href="#">Link item four</a></li>
-              <!-- <li><a href="#">Link item five</a></li> -->
             </ul>
           </div>
         </aside>
 
         <div class="about-cards">
           <article>
-            <img src="https://placehold.co/256x144" alt="a pic" />
+            <img src="./img/about-card1.jpg" alt="a pic" />
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem, ipsum dolor.</p>
           </article>
           <article>
-            <img src="https://placehold.co/256x144" alt="a pic" />
+            <img src="./img/about-card2.jpg" alt="a pic" />
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem, ipsum dolor.</p>
           </article>
           <article>
-            <img src="https://placehold.co/256x144" alt="a pic" />
+            <img src="./img/about-card3.jpg" alt="a pic" />
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem, ipsum dolor.</p>
           </article>
           <article>
-            <img src="https://placehold.co/256x144" alt="a pic" />
+            <img src="./img/about-card4.jpg" alt="a pic" />
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem, ipsum dolor.</p>
           </article>
           <article>
-            <img src="https://placehold.co/256x144" alt="a pic" />
+            <img src="./img/about-card5.jpg" alt="a pic" />
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem, ipsum dolor.</p>
           </article>
           <article>
-            <img src="https://placehold.co/256x144" alt="a pic" />
+            <img src="./img/about-card6.jpg" alt="a pic" />
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem, ipsum dolor.</p>
           </article>
