feat: add nav sub menu

--- a/public/index.html
+++ b/public/index.html
@@ -179,73 +179,129 @@
           </svg>
         </button>
         <ul class="mobile-nav__menu">
-          <li class="mobile-nav__links mobile-nav__primary">
-            <a href="#">ADMISSIONS</a>
-            <ul class="mobile-nav__sub-menu">
-              <li class="mobile-nav__sub-menu__links">Link One</li>
-              <li class="mobile-nav__sub-menu__links">Link Two</li>
-              <li class="mobile-nav__sub-menu__links">Link Three</li>
-              <li class="mobile-nav__sub-menu__links">Link Four</li>
+          <li
+            class="mobile-nav__links mobile-nav__primary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold">ADMISSIONS</a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
             </ul>
           </li>
 
-          <li class="mobile-nav__links mobile-nav__primary">
-            <a href="#">ACADEMICS</a>
-            <ul class="mobile-nav__sub-menu">
-              <li class="mobile-nav__sub-menu__links">Link One</li>
-              <li class="mobile-nav__sub-menu__links">Link Two</li>
-              <li class="mobile-nav__sub-menu__links">Link Three</li>
-              <li class="mobile-nav__sub-menu__links">Link Four</li>
+          <li
+            class="mobile-nav__links mobile-nav__primary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold">ACADEMICS</a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
             </ul>
           </li>
 
-          <li class="mobile-nav__links mobile-nav__primary">
-            <a href="#">NOTICE</a>
-            <ul class="mobile-nav__sub-menu">
-              <li class="mobile-nav__sub-menu__links">Link One</li>
-              <li class="mobile-nav__sub-menu__links">Link Two</li>
-              <li class="mobile-nav__sub-menu__links">Link Three</li>
-              <li class="mobile-nav__sub-menu__links">Link Four</li>
+          <li
+            class="mobile-nav__links mobile-nav__primary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold">NOTICE</a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
             </ul>
           </li>
 
-          <li class="mobile-nav__links mobile-nav__primary">
-            <a href="#">ABOUT</a>
-            <ul class="mobile-nav__sub-menu">
-              <li class="mobile-nav__sub-menu__links">Link One</li>
-              <li class="mobile-nav__sub-menu__links">Link Two</li>
-              <li class="mobile-nav__sub-menu__links">Link Three</li>
-              <li class="mobile-nav__sub-menu__links">Link Four</li>
+          <li
+            class="mobile-nav__links mobile-nav__primary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold">ABOUT</a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
             </ul>
           </li>
 
-          <li class="mobile-nav__links mobile-nav__secondary">
-            <a href="#">Staff</a>
-            <ul class="mobile-nav__sub-menu">
-              <li class="mobile-nav__sub-menu__links">Link One</li>
-              <li class="mobile-nav__sub-menu__links">Link Two</li>
-              <li class="mobile-nav__sub-menu__links">Link Three</li>
-              <li class="mobile-nav__sub-menu__links">Link Four</li>
+          <li
+            class="mobile-nav__links mobile-nav__secondary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold">Staff</a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
             </ul>
           </li>
 
-          <li class="mobile-nav__links mobile-nav__secondary">
-            <a href="#">Students</a>
-            <ul class="mobile-nav__sub-menu">
-              <li class="mobile-nav__sub-menu__links">Link One</li>
-              <li class="mobile-nav__sub-menu__links">Link Two</li>
-              <li class="mobile-nav__sub-menu__links">Link Three</li>
-              <li class="mobile-nav__sub-menu__links">Link Four</li>
+          <li
+            class="mobile-nav__links mobile-nav__secondary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold">Students</a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
             </ul>
           </li>
 
-          <li class="mobile-nav__links mobile-nav__secondary">
-            <a href="#">Parents</a>
-            <ul class="mobile-nav__sub-menu">
-              <li class="mobile-nav__sub-menu__links">Link One</li>
-              <li class="mobile-nav__sub-menu__links">Link Two</li>
-              <li class="mobile-nav__sub-menu__links">Link Three</li>
-              <li class="mobile-nav__sub-menu__links">Link Four</li>
+          <li
+            class="mobile-nav__links mobile-nav__secondary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold">Parents</a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
             </ul>
           </li>
         </ul>
